--- a/templates/loans/loan_options.html
+++ b/templates/loans/loan_options.html
@@ -18,4 +18,9 @@
             <a href="{% url 'request_loan' %}">Request Loan</a>
         </button>
     {% endbuttons %}
+    {% buttons %}
+        <button type="button" class="btn btn-primary">
+            <a href="{% url 'register_business' %}">Register Business</a>
+        </button>
+    {% endbuttons %}
 {% endblock %}
